--- a/templates/base.html
+++ b/templates/base.html
@@ -8,23 +8,23 @@
     <meta name="keywords" content="admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
     <meta name="author" content="PIXINVENT">
     <title>{% block title %}{% endblock %} - Instant Notification System</title>
-    <link rel="apple-touch-icon" href="static/app-assets/images/ico/apple-icon-120.png">
-    <link rel="shortcut icon" type="image/x-icon" href="static/app-assets/images/ico/favicon.ico">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='app-assets/images/ico/apple-icon-120.png') }}">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='app-assets/images/ico/favicon.ico') }}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700" rel="stylesheet">
     <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet">
     <!-- BEGIN VENDOR CSS-->
-    <link rel="stylesheet" type="text/css" href="static/app-assets/css/vendors.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/css/vendors.css') }}">
     <!-- END VENDOR CSS-->
     <!-- BEGIN MODERN CSS-->
-    <link rel="stylesheet" type="text/css" href="static/app-assets/css/app.css">
-    <link rel="stylesheet" type="text/css" href="static/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/css/app.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
     <!-- END MODERN CSS-->
     <!-- BEGIN Page Level CSS-->
-    <link rel="stylesheet" type="text/css" href="static/app-assets/css/core/menu/menu-types/vertical-menu-modern.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/css/core/menu/menu-types/vertical-menu-modern.css') }}">
     <!-- END Page Level CSS-->
     {% block import_styles %}{% endblock %}
     <!-- BEGIN Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="static/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='assets/css/style.css') }}">
     <!-- END Custom CSS-->
   </head>
   <body class="vertical-layout vertical-menu-modern {%block body_template%}{%endblock%}" data-open="click" data-menu="vertical-menu-modern" data-col="2-columns">
@@ -48,21 +48,22 @@
     {% include 'footer.html' %}
 
     <!-- BEGIN VENDOR JS-->
-    <script src="static/app-assets/js/core/libraries/jquery.min.js" type="text/javascript"></script>
-    <script src="static/app-assets/vendors/js/ui/popper.min.js" type="text/javascript"></script>
-    <script src="static/app-assets/js/core/libraries/bootstrap.min.js" type="text/javascript"></script>
-    <script src="static/app-assets/vendors/js/ui/perfect-scrollbar.jquery.min.js" type="text/javascript"></script>
-    <script src="static/app-assets/vendors/js/ui/unison.min.js" type="text/javascript"></script>
-    <script src="static/app-assets/vendors/js/ui/blockUI.min.js" type="text/javascript"></script>
-    <script src="static/app-assets/vendors/js/ui/jquery-sliding-menu.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/js/core/libraries/jquery.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/popper.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/js/core/libraries/bootstrap.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/perfect-scrollbar.jquery.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/unison.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/blockUI.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/vendors/js/ui/jquery-sliding-menu.js') }}" type="text/javascript"></script>
     <!-- BEGIN VENDOR JS-->
+    <script src="{{ url_for('static', filename='assets/js/socket.io.js') }}" type="text/javascript"></script>
     <!-- BEGIN PAGE IMPORTED JS-->
     {% block import_scripts %}{% endblock %}
     <!-- END PAGE IMPORTED JS-->
     <!-- BEGIN MODERN JS-->
-    <script src="static/app-assets/js/core/app-menu.js" type="text/javascript"></script>
-    <script src="static/app-assets/js/core/app.js" type="text/javascript"></script>
-    <script src="static/app-assets/js/scripts/customizer.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/js/core/app-menu.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/js/core/app.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='app-assets/js/scripts/customizer.js') }}" type="text/javascript"></script>
     <!-- END MODERN JS-->
     <!-- BEGIN PAGE LEVEL JS-->
     <!-- END PAGE LEVEL JS-->
