--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block import_styles%}
-<link rel="stylesheet" type="text/css" href="static/app-assets/css/core/colors/palette-gradient.css">
-<link rel="stylesheet" type="text/css" href="static/app-assets/fonts/simple-line-icons/style.min.css">
-<link rel="stylesheet" type="text/css" href="static/app-assets/css/pages/chat-application.css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/css/core/colors/palette-gradient.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/fonts/simple-line-icons/style.min.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/css/pages/chat-application.css') }}">
 {% endblock %}
 {% block body_template %}content-left-sidebar chat-application  menu-expanded fixed-navbar{% endblock %}
 {% block content %}
@@ -24,7 +24,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-3.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -41,7 +41,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-busy">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-7.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -60,7 +60,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-away">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-8.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-8.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -79,7 +79,7 @@
           <a href="#" class="media bg-blue-grey bg-lighten-5 border-right-info border-right-2">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-7.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -94,7 +94,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-away">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-5.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-5.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -109,7 +109,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-9.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-9.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -128,7 +128,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-busy">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-7.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -143,7 +143,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-14.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-14.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -156,7 +156,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-3.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -173,7 +173,7 @@
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-busy">
-                <img class="media-object rounded-circle" src="static/app-assets/images/portrait/small/avatar-s-7.png"
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
@@ -207,7 +207,7 @@
               <div class="chat-avatar">
                 <a class="avatar" data-toggle="tooltip" href="#" data-placement="right" title=""
                 data-original-title="">
-                  <img src="static/app-assets/images/portrait/small/avatar-s-1.png" alt="avatar"
+                  <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-1.png') }}" alt="avatar"
                   />
                 </a>
               </div>
@@ -220,7 +220,7 @@
             <div class="chat chat-left">
               <div class="chat-avatar">
                 <a class="avatar" data-toggle="tooltip" href="#" data-placement="left" title="" data-original-title="">
-                  <img src="static/app-assets/images/portrait/small/avatar-s-7.png" alt="avatar"
+                  <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}" alt="avatar"
                   />
                 </a>
               </div>
@@ -238,7 +238,7 @@
               <div class="chat-avatar">
                 <a class="avatar" data-toggle="tooltip" href="#" data-placement="right" title=""
                 data-original-title="">
-                  <img src="static/app-assets/images/portrait/small/avatar-s-1.png" alt="avatar"
+                  <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-1.png') }}" alt="avatar"
                   />
                 </a>
               </div>
@@ -255,7 +255,7 @@
             <div class="chat chat-left">
               <div class="chat-avatar">
                 <a class="avatar" data-toggle="tooltip" href="#" data-placement="left" title="" data-original-title="">
-                  <img src="static/app-assets/images/portrait/small/avatar-s-7.png" alt="avatar"
+                  <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}" alt="avatar"
                   />
                 </a>
               </div>
@@ -275,7 +275,7 @@
               <div class="chat-avatar">
                 <a class="avatar" data-toggle="tooltip" href="#" data-placement="right" title=""
                 data-original-title="">
-                  <img src="static/app-assets/images/portrait/small/avatar-s-1.png" alt="avatar"
+                  <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-1.png') }}" alt="avatar"
                   />
                 </a>
               </div>
@@ -288,7 +288,7 @@
             <div class="chat chat-left">
               <div class="chat-avatar">
                 <a class="avatar" data-toggle="tooltip" href="#" data-placement="left" title="" data-original-title="">
-                  <img src="static/app-assets/images/portrait/small/avatar-s-7.png" alt="avatar"
+                  <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}" alt="avatar"
                   />
                 </a>
               </div>
@@ -305,7 +305,7 @@
               <div class="chat-avatar">
                 <a class="avatar" data-toggle="tooltip" href="#" data-placement="right" title=""
                 data-original-title="">
-                  <img src="static/app-assets/images/portrait/small/avatar-s-1.png" alt="avatar"
+                  <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-1.png') }}" alt="avatar"
                   />
                 </a>
               </div>
@@ -344,5 +344,6 @@
 </div>
 {% endblock %}
 {% block import_scripts %}
-<script src="static/app-assets/js/scripts/pages/chat-application.js" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='app-assets/js/scripts/pages/chat-application.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='assets/js/chat.js') }}" type="text/javascript"></script>
 {% endblock %}
