--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
       <div class="navbar-header">
         <ul class="nav navbar-nav flex-row">
           <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu font-large-1"></i></a></li>
-          <li class="nav-item mr-auto"><a class="navbar-brand" href="#"><img class="brand-logo" alt="modern admin logo" src="static/app-assets/images/logo/logo.png">
+          <li class="nav-item mr-auto"><a class="navbar-brand" href="#"><img class="brand-logo" alt="modern admin logo" src="{{ url_for('static', filename='app-assets/images/logo/logo.png') }}">
               <h3 class="brand-text">Modern Admin</h3></a></li>
           <li class="nav-item d-md-none"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="la la-ellipsis-v"></i></a></li>
         </ul>
@@ -28,7 +28,7 @@
                       <div class="media">
                         <div class="media-left">
                           <span class="avatar avatar-sm avatar-online rounded-circle">
-                            <img src="static/app-assets/images/portrait/small/avatar-s-19.png" alt="avatar"><i></i></span>
+                            <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-19.png') }}" alt="avatar"><i></i></span>
                         </div>
                         <div class="media-body">
                           <h6 class="media-heading">Margaret Govan</h6>
@@ -43,7 +43,7 @@
                       <div class="media">
                         <div class="media-left">
                           <span class="avatar avatar-sm avatar-busy rounded-circle">
-                            <img src="static/app-assets/images/portrait/small/avatar-s-2.png" alt="avatar"><i></i></span>
+                            <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-2.png') }}" alt="avatar"><i></i></span>
                         </div>
                         <div class="media-body">
                           <h6 class="media-heading">Bret Lezama</h6>
@@ -58,7 +58,7 @@
                       <div class="media">
                         <div class="media-left">
                           <span class="avatar avatar-sm avatar-online rounded-circle">
-                            <img src="static/app-assets/images/portrait/small/avatar-s-3.png" alt="avatar"><i></i></span>
+                            <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}" alt="avatar"><i></i></span>
                         </div>
                         <div class="media-body">
                           <h6 class="media-heading">Carie Berra</h6>
@@ -73,7 +73,7 @@
                       <div class="media">
                         <div class="media-left">
                           <span class="avatar avatar-sm avatar-away rounded-circle">
-                            <img src="static/app-assets/images/portrait/small/avatar-s-6.png" alt="avatar"><i></i></span>
+                            <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-6.png') }}" alt="avatar"><i></i></span>
                         </div>
                         <div class="media-body">
                           <h6 class="media-heading">Eric Alsobrook</h6>
