--- a/templates/mass_message.html
+++ b/templates/mass_message.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block import_styles%}
-<link rel="stylesheet" type="text/css" href="static/app-assets/vendors/css/forms/selects/select2.min.css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app-assets/vendors/css/forms/selects/select2.min.css') }}">
 {% endblock %}
 {% block body_template %}2-columns menu-expanded fixed-navbar{% endblock %}
 {% block content %}
@@ -56,6 +56,6 @@
 </div>
 {% endblock %}
 {% block import_scripts %}
-<script src="static/app-assets/vendors/js/forms/select/select2.full.min.js" type="text/javascript"></script>
-<script src="static/app-assets/js/scripts/forms/select/form-select2.js" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='app-assets/vendors/js/forms/select/select2.full.min.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='app-assets/js/scripts/forms/select/form-select2.js') }}" type="text/javascript"></script>
 {% endblock %}
