--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -13,7 +13,7 @@
         </li>
         <li class="{%if request.path=='/mass-message'%}active{% endif %} nav-item"><a href="/mass-message"><i class="la la-envelope"></i><span class="menu-title">Mass Message</span></a>
         </li>
-        <li class="{%if request.path=='/chat'%}active{% endif %} nav-item"><a href="/chat"><i class="la la-comments"></i><span class="menu-title">Chat</span></a>
+        <li class="{%if request.path.split('/')[1]=='chat'%}active{% endif %} nav-item"><a href="/chat"><i class="la la-comments"></i><span class="menu-title">Chat</span></a>
         </li>
         <li class=" navigation-header"><span>Extra</span><i class="la la-ellipsis-h ft-minus" data-toggle="tooltip" data-placement="right" data-original-title="Extra"></i>
         </li>
