--- a/templates/chat.html
+++ b/templates/chat.html
@@ -21,24 +21,8 @@
       </div>
       <div id="users-list" class="list-group position-relative">
         <div class="users-list-padding media-list">
-          <a href="#" class="media border-0">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Elizabeth Elliott
-                <span class="font-small-3 float-right info">4:14 AM</span>
-              </h6>
-              <p class="list-group-item-text text-muted mb-0">Okay
-                <span class="float-right primary"></span>
-              </p>
-            </div>
-          </a>
-          <a href="#" class="media bg-blue-grey bg-lighten-4 border-right-info border-right-2">
+          UNREAD BADGES + UNREAD COLORING
+          <a href="#" class="media bg-blue-grey bg-lighten-5 border-right-info border-right-2">
             <div class="media-left pr-1">
               <span class="avatar avatar-md">
                 <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
@@ -58,21 +42,25 @@
             </div>
           </a>
 
-          <a href="#" class="media bg-blue-grey bg-lighten-5 border-right-info border-right-2">
+          {% for student in students %}
+          <a href="/chat/{{ student[0] }}" class="media {%if request.path.split('/')[2]==student[0] %}bg-blue-grey bg-lighten-4 border-right-info border-right-2{%else%}border-0{% endif %}">
             <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
+              <span class="avatar avatar-md">
+                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
               </span>
             </div>
             <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Wayne Burton
-                <span class="font-small-3 float-right info">Today</span>
+              <h6 class="list-group-item-heading">{{ student[1] }} {{ student[2] }}
+                <span class="font-small-3 float-right info">{{ student[8] }}</span>
               </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check primary font-small-2"></i> Can we connect?</p>
+              <p class="list-group-item-text text-muted mb-0">{{ student[3] }}
+                <span class="float-right primary"></span>
+              </p>
             </div>
           </a>
+          {% endfor %}
         </div>
       </div>
     </div>
