--- a/templates/chat.html
+++ b/templates/chat.html
@@ -20,27 +20,7 @@
         </fieldset>
       </div>
       <div id="users-list" class="list-group position-relative">
-        <div class="users-list-padding media-list">
-          <!-- <a href="#" class="media bg-blue-grey bg-lighten-5 border-right-info border-right-2">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Kristopher Candy
-                <span class="font-small-3 float-right info">9:04 PM</span>
-              </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check primary font-small-2"></i> Thank you
-                <span class="float-right primary">
-                  <span class="badge badge-pill badge-danger">12</span>
-                </span>
-              </p>
-            </div>
-          </a> -->
-
+        <div class="users-list-padding media-list" id="student_messages">
           {% for student in data['students'] %}
           <a href="/chat/{{ student[0] }}" class="media {%if request.path.split('/')[2]==student[0]%}bg-blue-grey bg-lighten-4 border-right-info border-right-2{%elif student[7]!=0%}bg-blue-grey bg-lighten-5 border-right-info border-right-2{%else%}border-0{% endif %}">
             <div class="media-left pr-1">
@@ -54,10 +34,11 @@
               <h6 class="list-group-item-heading">{{ student[1] }} {{ student[2] }}
                 <span class="font-small-3 float-right info">{{ student[8] }}</span>
               </h6>
-              <p class="list-group-item-text text-muted mb-0">{%if student[6]%}Image{%else%}{{ student[3] }}{%endif%}
+              <p class="list-group-item-text text-muted mb-0">
+                <span id="messages-id-{{student[0]}}">{%if student[6]%}Image{%else%}{{ student[3] }}{%endif%}</span>
                 <span class="float-right primary">
                   {%if student[7]!=0%}
-                    <span class="badge badge-pill badge-danger">{{student[7]}}</span>
+                    <span class="badge badge-pill badge-dark">{{student[7]}}</span>
                   {%endif%}
                 </span>
               </p>
