--- a/templates/chat.html
+++ b/templates/chat.html
@@ -27,7 +27,6 @@
               <span class="avatar avatar-md">
                 <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}"
                 alt="Generic placeholder image">
-                <i></i>
               </span>
             </div>
             <div class="media-body w-100">
@@ -36,9 +35,9 @@
               </h6>
               <p class="list-group-item-text text-muted mb-0">
                 <span id="messages-id-{{student[0]}}">{%if student[6]%}Image{%else%}{{ student[3] }}{%endif%}</span>
-                <span class="float-right primary">
+                <span class="float-right primary" id="unread-wrap-{{student[0]}}">
                   {%if student[7]!=0%}
-                    <span class="badge badge-pill badge-dark" id="unread_count-{{student[0]}}">{{student[7]}}</span>
+                    <span class="badge badge-pill badge-dark" id="unread-count-{{student[0]}}">{{student[7]}}</span>
                   {%endif%}
                 </span>
               </p>
@@ -70,7 +69,7 @@
                 <div class="chat chat-left">
                   <div class="chat-body">
                     {% if message[3] %} <!-- if that message is an image -->
-                      <div class="chat-content"  style="width:20%">
+                      <div class="chat-content" style="width:20%">
                         <a href="../static/{{message[1]}}" target="_blank"><img src="../static/{{message[1]}}" width="100%"></a>
                       </div>
                     {% else %} <!--if it is a regular text-->
