--- a/templates/header.html
+++ b/templates/header.html
@@ -16,14 +16,14 @@
           <ul class="nav navbar-nav float-right">
             <li class="dropdown dropdown-notification nav-item">
               <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-mail"></i>
-                <span class="badge badge-pill badge-default badge-warning badge-default badge-up badge-glow">3</span>
+                <span class="badge badge-pill badge-default badge-warning badge-default badge-up badge-glow">{{data['unread_students']|length}}</span>
               </a>
               <ul class="dropdown-menu dropdown-menu-media dropdown-menu-right">
                 <li class="dropdown-menu-header">
                   <h6 class="dropdown-header m-0">
                     <span class="grey darken-2">Messages</span>
                   </h6>
-                  <span class="notification-tag badge badge-default badge-warning float-right m-0">4 New</span>
+                  <span class="notification-tag badge badge-default badge-warning float-right m-0">{{data['unread_students']|length}} New</span>
                 </li>
                   <li class="scrollable-container media-list w-100 ps-container ps-theme-dark" data-ps-id="a8ba6310-7aaf-a8e0-4842-959ba0002a52">
                     {% if data['unread_students']|length==0 %}&nbsp;&nbsp;No unread messages<br><br>{%endif%}
