--- a/templates/header.html
+++ b/templates/header.html
@@ -45,7 +45,7 @@
                     </a>
                     {% endfor %}
                   <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;"><div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;"><div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div></div></li>
-                <li class="dropdown-menu-footer"><a class="dropdown-item text-muted text-center" href="javascript:void(0)">Read all messages</a></li>
+                <li class="dropdown-menu-footer"><a class="dropdown-item text-muted text-center" href="/chat">Read all messages</a></li>
               </ul>
             </li>
             
