--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,14 +26,33 @@
 			            </div>
 			        </div>
 			        <div class="card-content collapse show">
-			            <div class="card-body">
-			                <h4 class="card-title">Content title</h4>
-			                <p class="card-text">Content body</p>
-			            </div>
+			            <div class="col-xl-12 col-12">
+           
+		                <div class="card-body pt-0">
+		                  <div class="row mb-1">
+		                    <div class="col-6 col-md-4">
+		                      <h5>Current week</h5>
+		                      <h2 class="danger">$82,124</h2>
+		                    </div>
+		                    <div class="col-6 col-md-4">
+		                      <h5>Previous week</h5>
+		                      <h2 class="text-muted">$52,502</h2>
+		                    </div>
+		                  </div>
+		                  <div class="chartjs">
+		                    <canvas id="thisYearRevenue" width="400" data-values="[25,67,30]" data-timeline='["Mon","Tue", "Wed"]' style="position: absolute;"></canvas>
+		                    <canvas id="lastYearRevenue" width="400"></canvas>
+		                  </div>
+		                </div>
+ 
 			        </div>
 			    </div>
 			</div>
 		</section>
     </div>
 </div>
+{% endblock %}
+{% block import_scripts %}
+<script src="{{ url_for('static', filename='app-assets/vendors/js/charts/chart.min.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='app-assets/js/scripts/pages/dashboard-sales.js') }}" type="text/javascript"></script>
 {% endblock %}
